# shigoto

./: pyproject.toml
kanban/: main.py
kanban-frontend/: .histoire.ts  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json
kanban-frontend/src/: App.vue  main.ts
kanban-frontend/src/common/plugins/marked-vue/: VueParser.ts  VueRenderer.ts
kanban-frontend/src/components/: MarkdownRenderer.vue
kanban-frontend/src/components/board/: KanbanBoard.vue  KanbanBoardHeader.vue  KanbanCard.vue  KanbanCardDisplay.vue  KanbanColumn.vue  KanbanList.vue  KanbanListHeader.vue
kanban-frontend/src/components/board/ui/: NewKanbanStage.vue  NewKanbanStory.vue
kanban-frontend/src/components/shared/: AppButton.vue
kanban-frontend/src/components/shared/stories/: AppButton.story.vue
kanban-frontend/src/data/: board.ts
kanban-frontend/src/stores/: board.ts  column.ts  stories.ts  story.ts  template.ts
kanban-frontend/src/types/: KanbanTypes.ts
kanban-frontend/src/utils/monoids/: types.ts
kanban-frontend/src/utils/monoids/option/: None.ts  Option.ts  Some.ts  index.ts
kanban-frontend/src/utils/monoids/result/: Err.ts  Ok.ts  Result.ts  ResultError.ts  index.ts
kanban-frontend/src/utils/types/: KanbanTypes.ts
kanban-frontend/src/views/: KanbanView.vue
kanban/api/users/: views.py
kanban/db/: base.py  dependencies.py
kanban/db/models/users/: depends.py  users.py
